[gd_scene load_steps=4 format=3 uid="uid://b7xiomvhx273l"]

[ext_resource type="Script" path="res://settings.gd" id="1_agw5y"]

[sub_resource type="LabelSettings" id="LabelSettings_xcekr"]
font_size = 50
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3d2xv"]
font_size = 50
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="Settings" type="Node2D"]
script = ExtResource("1_agw5y")

[node name="BGVolumeSlider" type="HSlider" parent="."]
offset_left = 128.0
offset_top = 179.0
offset_right = 771.0
offset_bottom = 354.0
max_value = 1.0
step = 0.05

[node name="Label" type="Label" parent="BGVolumeSlider"]
layout_mode = 0
offset_left = 7.0
offset_top = -16.0
offset_right = 451.0
offset_bottom = 53.0
text = "Music Volume"
label_settings = SubResource("LabelSettings_xcekr")

[node name="SFXVolumeSlider" type="HSlider" parent="."]
offset_left = 125.0
offset_top = 342.0
offset_right = 768.0
offset_bottom = 517.0
max_value = 1.0
step = 0.05

[node name="Label" type="Label" parent="SFXVolumeSlider"]
layout_mode = 0
offset_left = 7.0
offset_top = -16.0
offset_right = 451.0
offset_bottom = 53.0
text = "Sound Effect Volume"
label_settings = SubResource("LabelSettings_xcekr")

[node name="Home" type="Button" parent="."]
offset_left = 127.0
offset_top = 495.0
offset_right = 304.0
offset_bottom = 604.0

[node name="Label" type="Label" parent="Home"]
layout_mode = 0
offset_left = 14.0
offset_top = 21.0
offset_right = 159.0
offset_bottom = 90.0
text = "Home"
label_settings = SubResource("LabelSettings_3d2xv")

[connection signal="value_changed" from="BGVolumeSlider" to="." method="_on_bg_volume_slider_value_changed"]
[connection signal="value_changed" from="SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="Home" to="." method="_on_home_pressed"]
